# eo_tilematcher

./: .gitignore  MANIFEST.in  README.rst  environment_dev.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check_black.yml  run_tests.yml
data/: ezequiel-ramos-mexia-dam.geojson  fontana-lake.geojson
eo_tilematcher/: __init__.py  eo_tilematcher.py
eo_tilematcher/data/: data_builder.py
eo_tilematcher/data/landsat/: landsat_tiles.dbf
eo_tilematcher/data/sentinel2/: sentinel2_tiles.dbf  sentinel2_tiles.pkl  sentinel2_tiles.shp  sentinel2_tiles.shx
notebooks/: Untitled.ipynb  eo-tilematcher-101.ipynb  tutorial-0.ipynb
