[metadata]
name = eo_tilematcher
version = 0.1
author = Felix Rojo Lapalma, Andrés Pérez Hortal
description = Tools to quickly find the Sentinel2, Landasat5, and Landsat8 tiles that match a given region of interest.
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/EO-Forge/eo_tilematcher.git
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    geopandas
include_package_data = True

[options.package_data]
* = data/*/*.pkl

[options.entry_points]
console_scripts =
    match_tiles = eo_tilematcher.__main__:match_tiles
